.gradle/gradle.log
:compileApiJava UP-TO-DATE
:processApiResources UP-TO-DATE
:apiClasses UP-TO-DATE
:sourceMainJava
:compileJavawarning: [options] bootstrap class path not set in conjunction with -source 1.7
C:\Users\magna\OneDrive\Documents\GitHub\Mekanism2\build\sources\java\mekanism\common\item\ItemBlockBasic.java:88: error: <identifier> expected
			return new 1;
			          ^
C:\Users\magna\OneDrive\Documents\GitHub\Mekanism2\build\sources\java\mekanism\common\item\ItemBlockBasic.java:88: error: '(' or '[' expected
			return new 1;
			           ^
2 errors
1 warning
 FAILED

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output.

BUILD FAILED

Total time: 6.521 secs
